[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.182", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
warp = "0.3.5"
